feat: update to vue/codex, new page

--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -1,39 +1,50 @@
 {
-	"avatar_desc": "この拡張機能は、他の拡張機能のために使用することができるアバターシステムを提供します",
-	"uploadavatar": "アバターをアップロード",
-	"uploadavatar-submit": "アバターをアップロード",
-	"uploadavatar-selectfile": "ファイルを選択",
-	"prefs-editavatar": "アバター：",
-	"avatar-notuploaded": "アップロードしたファイルはアバターが空のようです。",
-	"avatar-invalid": "画像形式が無効です",
-	"avatar-notsquare": "アップロードした画像は正方形ではありません",
-	"avatar-toosmall": "アップロードされた画像が小さすぎます",
-	"avatar-toolarge": "アップロードされた画像が大きすぎます",
-	"avatar-saved": "アバターを保存しました。",
-	"uploadavatar-notice": "'''注意:'''保存後、変更を確認するにはブラウザーのキャッシュを消去する必要がある場合があります。\n* '''Firefox / Safari:''' ''Shift'' を押しながら ''再読み込み'' をクリックするか、''Ctrl-F5'' または ''Ctrl-R'' を押してください (Mac では ''&#x2318;-R'')\n* '''Google Chrome:''' ''Ctrl-Shift-R'' を押してください (Mac では ''⌘-Shift-R'')\n* '''Internet Explorer:''' ''Ctrl'' を押しながら ''最新の情報に更新'' をクリックするか、''Ctrl-F5'' を押してください\n* '''Opera:'''''ツール → 設定'' からキャッシュをクリアしてください。",
-	"uploadavatar-nofile": "これはあなたの現在のアバターです。あなたのアバターを変更するには、下の「ファイルを選択」ボタンをクリックしてください。",
-	"uploadavatar-hint": "アバターをトリミングするには、ボックスのサイズを調整したり、移動したりしてください。",
+    "avatar_desc": "このプラグインは、他のプラグインで使用できるアバターシステムを提供します。",
+    "uploadavatar": "アバターをアップロード",
+    "uploadavatar-submit": "アバターをアップロード",
+    "uploadavatar-selectfile": "ファイルを選択",
+    "prefs-editavatar": "アバター：",
+    "avatar-notuploaded": "アバターがアップロードされていません",
+    "avatar-invalid": "不正な画像形式です",
+    "avatar-notsquare": "アップロードされた画像が正方形ではありません",
+    "avatar-toosmall": "アップロードされた画像が小さすぎます",
+    "avatar-toolarge": "アップロードされた画像が大きすぎます",
+    "avatar-saved": "あなたのアバターは保存されました",
+    "uploadavatar-notice": "'''注意：'''保存後、変更を反映するにはブラウザのキャッシュをクリアする必要がある場合があります。\n* '''Firefox/Safari:''' Shift キーを押しながら「再読み込み」をクリックするか、Ctrl+F5 または Ctrl+R (Mac では ⌘+R) を押してください\n* '''Google Chrome:''' Ctrl+Shift+R (Mac では ⌘+Shift+R) を押してください\n* '''Internet Explorer:''' Ctrl キーを押しながら「更新」をクリックするか、Ctrl+F5 を押してください\n* '''Opera:''' 「設定」→「プライバシーとセキュリティ」→「閲覧データを削除」でキャッシュをクリアしてください\n",
+    "uploadavatar-nofile": "現在のアバター",
+    "uploadavatar-hint": "クロッパーのサイズを調整したり、移動したりして、アバターを切り抜くことができます。",
 
-	"right-avataradmin": "他の利用者のアバターを削除",
-	"action-avataradmin": "このアバターを削除",
-	"right-avatarupload": "自身のアバターをアップロード",
-	"action-avatarupload": "このアバターをアップロード",
+    "right-avataradmin": "アバターを削除",
+    "action-avataradmin": "アバターを削除",
+    "right-avatarupload": "あなたのアバターをアップロード",
+    "action-avatarupload": "アバターをアップロード",
+    "cancel-avatarupload": "キャンセル",
+    "preview-avatar": "アバターをプレビュー",
+    "reselect-the-avatar": "再選択",
 
-	"log-name-avatar": "アバター記録",
-	"log-description-avatar": "以下はアバターのアップロード及び管理の記録です。",
-	"logentry-avatar-upload": "$1 がアバターをアップロードしました",
-	"logentry-avatar-delete": "$1 が「$3」のアバターを削除しました",
-	"logentry-avatar-action-view": "検査",
+    "log-name-avatar": "アバターログ",
+    "log-description-avatar": "このページでは、アバターのアップロードと管理の活動を表示します。",
+    "logentry-avatar-upload": "$1 がアバターをアップロードしました",
+    "logentry-avatar-delete": "$1 が $3 のアバターを削除しました",
+    "logentry-avatar-action-view": "表示",
 
-	"viewavatar": "アバターを検査",
-	"viewavatar-legend": "アバターを検査",
-	"viewavatar-username": "利用者名：",
-	"viewavatar-submit": "検査",
-	"viewavatar-delete-legend": "アバターを削除",
-	"viewavatar-delete-reason": "理由：",
-	"viewavatar-delete-submit": "削除",
-	"viewavatar-noavatar": "* この利用者はアバターがいません。",
-	"viewavatar-nouser": "* この名前の利用者は存在しません。",
+    "viewavatar": "アバターを表示",
+    "viewavatar-legend": "アバターを表示",
+    "viewavatar-username": "利用者名:",
+    "viewavatar-submit": "表示",
+    "viewavatar-delete-legend": "アバターを削除",
+    "viewavatar-delete-reason": "理由：",
+    "viewavatar-delete-submit": "このアバターを削除",
+    "viewavatar-noavatar": "この利用者はアバターを持っていません。",
+    "viewavatar-nouser": "この利用者は存在しません。",
+    "viewavatar-avatar-preview-tips": "$1 のアバター",
+    "viewavatar-insufficient-permissions": "権限が不足しています。",
 
-	"sidebar-viewavatar": "アバターを検査"
+    "sidebar-viewavatar": "アバターを表示",
+
+    "upload-avatar-success": "アバターのアップロードが成功しました",
+    "delete-avatar-success": "アバターの削除が成功しました",
+
+    "oss-bucket-not-configured": "OSSバケットが設定されていません。",
+	"oss-Invalid-init-param": "未設定の初期化パラメータ："
 }
